Styling changes to prevent overflow on home

--- a/styles.css
+++ b/styles.css
@@ -53,13 +53,15 @@ header p {
 }
 .home {
 	padding-top: 50px;
+	overflow: auto;
+	font-size: 2vw;
 }
 .home-background h1 {
-	font-size: 4rem;
+	font-size: 7vh;
 	color: white;
 }
 .home-background p {
-	font-size: 2rem;
+	font-size: 3vh;
 	color: white;
 }
 .home-background::before {
@@ -77,7 +79,7 @@ header p {
 	height: 100%;
 }
 .home-content {
-	position: relative;
+	position: absolute;
 	z-index: 1;
 	color: white;
 	text-align: center;
